# rescope

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: ci.yml  pages.yml  release.yml
crates/rescope-cli/: Cargo.toml
crates/rescope-cli/src/: args.rs  main.rs
crates/rescope-cli/src/commands/: diff.rs  live.rs  mod.rs  record.rs  replay.rs  snapshot.rs  tree.rs  watch.rs
crates/rescope-cli/src/output/: csv.rs  json.rs  mod.rs  prometheus.rs  sparkline.rs  table.rs  terminal.rs
crates/rescope-cli/src/tui/: app.rs  labels.rs  mod.rs  view.rs
crates/rescope-cli/tests/: cli.rs
crates/rescope-core/: Cargo.toml
crates/rescope-core/src/: aggregate.rs  error.rs  filter.rs  grouping.rs  lib.rs  metrics.rs  report.rs  sampling.rs  sort.rs  units.rs
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/commands/: completions.md  diff.md  help-version.md  index.md  live.md  man.md  record.md  replay.md  snapshot.md  tree.md  watch.md
docs/guides/: exports.md  filters-grouping.md  live.md  privacy.md  recording.md
docs/internals/: architecture.md  development.md  github-pages.md
docs/reference/: exit-codes.md  metrics.md  options.md  output-formats.md
docs/start/: core-concepts.md  install.md  quickstart.md  troubleshooting.md
npm/native/darwin-arm64/: package.json
npm/native/darwin-x64/: package.json
npm/native/linux-arm64/: package.json
npm/native/linux-x64/: package.json
npm/native/win32-x64/: package.json
npm/rescope/: README.md  package-lock.json  package.json
npm/rescope/test/: wrapper.test.js
scripts/: check-docs.mjs  ensure-docs-deps.mjs
