[package]
name = "rescope-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
humantime.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
sysinfo.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
